# riksdag-ontology

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
config/: fuseki-config.ttl
docs/: agency-elections.html  agency-memberships.html  agency-orgs.html  agency-people.html  agency.html  competency-questions.md  context.jsonld  documents-debates.html  documents-hierarchy.html  documents-legal.html  documents-motions.html  documents.html  index.html  interface-classes.html  interface-properties.html  interface.html  namespace-design.md  procedure-core.html  procedure-stages.html  procedure.html  voting-model.html  voting.html
ontology/: agency.ttl  documents.ttl  interface.ttl  procedure.ttl  riksdag.ttl  voting.ttl
pipeline/: cli.py  fetch.py  transform.py  validate.py
scripts/: generate_diagrams.py  generate_docs.py  load.sh  query.sh  start-fuseki.sh
shapes/: agency-shapes.ttl  document-shapes.ttl  procedure-shapes.ttl  voting-shapes.ttl
tests/: test_ontology_valid.py  test_shacl.py
tests/fixtures/: sample_data.ttl
tests/sparql/: 01-members-by-party.rq  02-committee-chairs.rq  03-vote-distribution.rq  04-documents-by-committee.rq  05-party-size.rq  06-interpellations-per-minister.rq  07-graph-stats.rq
vocabularies/: committees.ttl  constituencies.ttl  debate-types.ttl  document-types.ttl  expenditure-areas.ttl  parties.ttl  roles.ttl  vote-options.ttl
